--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
     - assets/logo_white_login.svg
     - assets/logo_white_login.png
     - assets/logo_black_login.png
+    - assets/rocomp_black.png
+    - assets/rocomp_white.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
