--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   shared_preferences: ^2.0.6
   file_picker: ^3.0.3
   csv: ^5.0.0
+  firebase_auth:
+  firebase_database:
+  firebase_core:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
