--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   csv: ^5.0.0
   firebase_auth:
   firebase_database:
+  firebase_storage:
   firebase_core:
   signature:
   # The following adds the Cupertino Icons font to your application.
