--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bootstrap_icons: ^1.5.0
+  bootstrap_icons:
   intl:
   camera:
   path_provider:
   path:
-  font_awesome_flutter: ^9.1.0
-  shared_preferences: ^2.0.6
-  file_picker: ^3.0.3
-  csv: ^5.0.0
+  font_awesome_flutter:
+  shared_preferences:
+  file_picker:
+  csv:
   firebase_auth:
   firebase_database:
   firebase_storage:
@@ -39,10 +39,10 @@ dependencies:
   signature:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get: ^4.1.4
-  get_storage: ^2.0.3
-  archive: ^3.3.0
+  cupertino_icons:
+  get:
+  get_storage:
+  archive:
 
 
 dev_dependencies:
